# packeteer

./: .gitignore  .gitlab-ci.yml  .oclint  AUTHORS  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.am  Pipfile  README.markdown  README.md  android.py  appveyor.yml  bootstrap.sh  build-config.h.in  common.mk  configure.ac  flake.nix  meson.build  meson_options.txt  packeteer-config.h.in  packeteer.pc.in  packetflinger.pc.in
CMakeModules/: Findmeta.cmake  Findtwine.cmake
benchmarks/: README.md  meson.build
benchmarks/event/: backends.h  libev.cpp  libevent.cpp  main.cpp  packeteer.cpp
examples/: README.md  meson.build
examples/echoclient/: main.cpp
examples/echoserver/: main.cpp
ext/connector/posix/: filedesc.cpp  tuntap.cpp
include/: packeteer.h
include/packeteer/: callback.h  connector.h  connector_iface.h  connector_specs.h  error.h  events.h  handle.h  peer_address.h  registry.h  resolver.h  scheduler.h  types.h  version.h  visibility.h
include/packeteer/connector/: interface.h  peer_address.h  types.h
include/packeteer/net/: address_type.h  network.h  socket_address.h
include/packeteer/scheduler/: callback.h  events.h  types.h
include/packeteer/util/: hash.h  operators.h  path.h  tmp.h  url.h
lib/: README.md  chrono.h  command_queue.h  concurrent_queue.h  connector.cpp  connector_schemes.cpp  connector_schemes.h  connector_url_params.cpp  connector_url_params.h  error.cpp  globals.h  interrupt.cpp  interrupt.h  macros.h  packeteer.cpp  peer_address.cpp  registry.cpp  resolver.cpp  scheduler.cpp  version.cpp
lib/connector/: anon.h  connector.cpp  connectors.h  peer_address.cpp  pipe.h  util.h
lib/connector/posix/: anon.cpp  anon.h  common.cpp  common.h  fd.cpp  fd.h  fifo.cpp  (+11 more)
lib/detail/: callbacks_io.h  callbacks_scheduled.h  callbacks_user_defined.h  connector.h  connector_anon.h  connector_local.h  connector_pipe.h  connector_tcp.h  connector_udp.h  io.h  io_epoll.cpp  io_epoll.h  io_kqueue.cpp  io_kqueue.h  io_poll.cpp  io_poll.h  io_select.cpp  io_select.h  scheduler_impl.cpp  scheduler_impl.h  worker.cpp
lib/net/: cidr.cpp  cidr.h  netincludes.h  network.cpp  socket_address.cpp
lib/posix/: connector_iface.cpp  handle.cpp
lib/scheduler/: io.h  io_thread.cpp  io_thread.h  scheduler_impl.cpp  scheduler_impl.h  worker.cpp  worker.h
lib/thread/: binder.h  chrono.h  tasklet.cpp  tasklet.h
lib/util/: path.cpp  path.h  string.cpp  string.h  tmp.cpp  url.cpp
lib/win32/: handle.cpp  sys_handle.h
m4/: ax_cache_line_size.m4  jf_check_func_in.m4
packeteer/: .gitignore  Makefile.am  callback.h  concurrent_queue.h  connector.cpp  connector.h  connector_specs.h  error.cpp  error.h  events.h  handle.h  macros.h  packeteer-config.h.in  packeteer.cpp  packeteer.h  peer_address.cpp  peer_address.h  pipe.cpp  pipe.h  scheduler.cpp  scheduler.h  scheduler_types.h  types.h  version.cpp  version.h
packeteer/detail/: callbacks_io.h  callbacks_scheduled.h  callbacks_user_defined.h  connector.cpp  connector.h  connector_anon.cpp  connector_anon.h  connector_local.cpp  connector_local.h  connector_pipe.cpp  connector_pipe.h  connector_tcp.h  connector_udp.h  filedescriptors.cpp  filedescriptors.h  globals.h  io.h  io_epoll.cpp  io_epoll.h  io_kqueue.cpp  io_kqueue.h  io_poll.cpp  io_poll.h  io_select.cpp  io_select.h  netincludes.h  operators.h  scheduler_impl.cpp  scheduler_impl.h  worker.cpp  worker.h
packeteer/detail/posix/: connector_anon.cpp  connector_local.cpp  connector_pipe.cpp  connector_pipe.h  connector_socket.cpp  connector_socket.h  connector_tcp.cpp  connector_udp.cpp
packeteer/net/: network.cpp  network.h  socket_address.cpp  socket_address.h
packeteer/net/detail/: cidr.cpp  cidr.h  sysincludes.h
packeteer/posix/: handle.cpp
packeteer/posix/detail/: connector_anon.cpp  connector_local.cpp  connector_pipe.cpp  connector_socket.cpp  connector_socket.h  connector_tcp.cpp  connector_udp.cpp
packeteer/thread/: binder.h  chrono.h  tasklet.cpp  tasklet.h
packeteer/util/: hash.h  operators.h  url.cpp  url.h
packeteer/win32/: handle.cpp
packeteer/win32/detail/: connector.cpp  connector_anon.cpp  connector_pipe.cpp  connector_socket.cpp
packetflinger/: .gitignore  Makefile.am  callback.h  concurrent_queue.h  duration.cpp  duration.h  error.cpp  error.h  events.h  macros.h  packetflinger.cpp  packetflinger.h  pipe.cpp  pipe.h  scheduler.cpp  scheduler.h  shared_ptr.h  types.h  version.cpp  version.h
packetflinger/detail/: Makefile.am  callbacks_io.h  callbacks_scheduled.h  callbacks_user_defined.h  io.h  io_callbacks.h  io_epoll.cpp  io_epoll.h  io_poll.cpp  io_poll.h  io_select.cpp  io_select.h  scheduled_callbacks.h  scheduler_impl.cpp  scheduler_impl.h  scheduler_impl_epoll.cpp  scheduler_impl_generic.cpp  user_defined_callbacks.h  worker.cpp  worker.h
subprojects/: .gitignore  liberate.wrap
test/: Makefile.am  Makefile.in  README.md  compare_times.h  env.h  meson.build  runner.cpp  test_binder.cpp  test_callback.cpp  test_cidr.cpp  test_concurrent_queue.cpp  test_connector.cpp  test_duration.cpp  test_error.cpp  test_handle.cpp  test_name.h  test_network.cpp  test_peer_address.cpp  test_pipe.cpp  test_scheduler.cpp  test_scheduler_containers.cpp  test_scheduler_impl.cpp  test_socket_address.cpp  test_tasklet.cpp  test_url.cpp  testsuite.cpp  value_tests.h
test/ext/: test_connector_filedesc.cpp  test_connector_tuntap.cpp
test/private/: test_command_queue.cpp  test_concurrent_queue.cpp  test_connector_util.cpp  test_io_operations.cpp  test_io_thread.cpp  test_net_cidr.cpp  test_overlapped.cpp  test_pipe_operations.cpp  test_scheduler_containers.cpp  test_socketpair.cpp  test_thread_binder.cpp  test_thread_tasklet.cpp  test_util_path.cpp  test_util_string.cpp
test/public/: test_callback.cpp  test_connector.cpp  test_connector_peer_address.cpp  test_error.cpp  test_handle.cpp  test_net_network.cpp  test_net_socket_address.cpp  test_peer_address.cpp  test_registry.cpp  test_resolver.cpp  test_scheduler.cpp  test_scheduler_callback.cpp  test_util_path.cpp  test_util_tmp.cpp  test_util_url.cpp
(+69 files in other folders)
